--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-python-dotenv
-python-langchain
-langchain_groq
+streamlit==1.22.0
+langchain==0.14.0
+langchain_groq==0.1.0
+python-dotenv==1.0.0
+openai==0.27.0
+requests==2.28.1
+transformers==4.28.1
+numpy==1.23.4
+pandas==1.5.3
+flask==2.2.3
