--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-streamlit==1.22.0
-python-langchain==0.14.0
-langchain_groq==0.1.0
-python-dotenv==1.0.0
-openai==0.27.0
-requests==2.28.1
-transformers==4.28.1
-numpy==1.23.4
-pandas==1.5.3
-flask==2.2.3
+streamlit==1.35.0
+langchain==0.2.14
+langchain-core==0.2.39
+langchain-community==0.2.12
+langchain_groq==0.1.9
+pandas==2.0.2
 -e ./llm_helper.py   
 -e ./post_generator.py
 -e ./few_shots.py
